--- a/index.html
+++ b/index.html
@@ -1,119 +1,193 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>De Todito - Polirubro</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>De Todito - Polirubro</title>
-  <link rel="stylesheet" href="/styles/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-</head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <div class="logo">
+        <img
+          src="/images/Logo-Web-De-Todito.png"
+          alt="Logo de De Todito Polirubro"
+        />
+      </div>
 
-<body>
+      <div class="search-bar">
+        <input type="text" placeholder="Encontrá lo que necesitás" />
+        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+      </div>
 
-  <!-- HEADER -->
-  <header class="header">
-    <div class="logo">
-      <img src="/images/De Todito LOGO(2).png" alt="De Todito Polirubro">
-    </div>
+      <div class="user-actions">
+        <a href="registro.html" class="btn">Creá tu cuenta</a>
+        <a href="login.html" class="btn">Ingresá</a>
+        <a href="carrito.html" class="btn"
+          ><i class="fa-solid fa-bag-shopping"></i
+        ></a>
+      </div>
+    </header>
 
-    <div class="search-bar">
-      <input type="text" placeholder="Encontrá lo que necesitás">
-      <button>🔍</button>
-    </div>
+    <!-- NAV -->
+    <nav class="nav">
+      <button class="category">
+        Categorías <i class="fa-solid fa-chevron-down"></i>
+      </button>
+      <button>Oferta</button>
+      <button>Vender</button>
+      <button>Ayuda</button>
+    </nav>
 
-    <div class="user-actions">
-      <a href="registro.html" class="btn">Creá tu cuenta</a>
-      <a href="login.html" class="btn">Ingresá</a>
-      <a href="carrito.html" class="btn">🛒</a>
-    </div>
-  </header>
+    <!-- SLIDER -->
+    <section class="slider">
+      <h1>De todo un poco, con amor y buenos precios</h1>
+    </section>
 
-  <!-- NAV -->
-  <nav class="nav">
-    <button>Categorías</button>
-    <button>Oferta</button>
-    <button>Vender</button>
-    <button>Ayuda</button>
-  </nav>
+    <!-- PRODUCTOS -->
+    <main class="productos">
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Toallón" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Toallón</h2>
+            <p>$17.600</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
 
-  <!-- SLIDER / HERO -->
-  <section class="hero">
-    <h1>De todo un poco, con amor y buenos precios</h1>
-  </section>
+      <!-- Más productos aquí -->
+    </main>
 
-  <!-- PRODUCTOS -->
-  <main class="productos">
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Toallón">
-      <h3>Toallón</h3>
-      <p>$17.600</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-    <div class="card">
-      <img src="/images/toallon.jpg" alt="Acolchado">
-      <h3>Acolchado Doble Faz Love & Home</h3>
-      <p>$63.300</p>
-      <button>🤍</button>
-    </div>
-
-    <!-- Más productos aquí -->
-  </main>
-
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="footer-section">
-      <p>Envíos a todo el país</p>
-      <p>Todos los medios de pago</p>
-    </div>
-    <div class="footer-links">
-      <a href="#">Preguntas frecuentes</a>
-      <a href="#">Cambios y devoluciones</a>
-      <a href="#">Contacto</a>
-    </div>
-    <div class="social">
-      <p>¡Seguinos en nuestras redes!</p>
-      <a href="#">📷</a>
-      <a href="#">📘</a>
-    </div>
-  </footer>
-
-</body>
-
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="footer-section">
+        <p>Envíos a todo el país</p>
+        <p>Todos los medios de pago</p>
+      </div>
+      <div class="footer-links">
+        <a href="#">Preguntas frecuentes</a>
+        <a href="#">Cambios y devoluciones</a>
+        <a href="#">Contacto</a>
+      </div>
+      <div class="social">
+        <p>¡Seguinos en nuestras redes!</p>
+        <a href="#">📷</a>
+        <a href="#">📘</a>
+      </div>
+    </footer>
+  </body>
+  <script
+    src="https://kit.fontawesome.com/38dd05b7b5.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
