modificar estilos e íconos a footer

--- a/index.html
+++ b/index.html
@@ -169,20 +169,46 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer">
+    <footer>
       <div class="footer-section">
-        <p>Envíos a todo el país</p>
-        <p>Todos los medios de pago</p>
+        <div class="footer-section-item">
+          <i class="fa-solid fa-truck"></i>
+          <div class="footer-section-text">
+            <p>Envíos a todo el país</p>
+            <span>Envíos por Andreani y Correo Argentino</span>
+          </div>
+        </div>
+        <div class="footer-section-item">
+          <i class="fa-solid fa-credit-card"></i>
+          <div class="footer-section-text">
+            <p>Todos los medios de pago</p>
+            <span>Aceptamos todos los medios de pagos</span>
+          </div>
+        </div>
       </div>
       <div class="footer-links">
-        <a href="#">Preguntas frecuentes</a>
-        <a href="#">Cambios y devoluciones</a>
-        <a href="#">Contacto</a>
+        <div class="footer-links-columns">
+          <div>
+            <a href="#">Preguntas frecuentes</a>
+            <a href="#">Métodos de pago</a>
+            <a href="#">Contacto</a>
+          </div>
+          <div>
+            <a href="#">Botón de arrepentimiento</a>
+            <a href="#">Cambios y devoluciones</a>
+          </div>
+        </div>
+        <div class="footer-social">
+          <p>¡Seguinos en nuestras redes!</p>
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+        </div>
       </div>
-      <div class="social">
-        <p>¡Seguinos en nuestras redes!</p>
-        <a href="#">📷</a>
-        <a href="#">📘</a>
+      <div class="footer-legal">
+        <a href="#">Términos y condiciones</a>
+        <a href="#">Políticas de privacidad</a>
       </div>
     </footer>
   </body>
