--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De Todito - Polirubro</title>
+
     <link rel="stylesheet" href="/styles/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
@@ -36,7 +37,7 @@
     </header>
 
     <!-- NAV -->
-    <nav class="nav">
+    <nav>
       <button class="category">
         Categorías <i class="fa-solid fa-chevron-down"></i>
       </button>
@@ -53,7 +54,9 @@
     <!-- PRODUCTOS -->
     <main class="productos">
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Toallón" />
+        <div class="card-image">
+          <img src="/images/BANNER1.png" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Toallón</h2>
@@ -67,7 +70,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/toallon.jpg" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
@@ -81,7 +86,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/BANNER2.png" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
@@ -95,7 +102,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/toallon.jpg" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
@@ -109,7 +118,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/toallon.jpg" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
@@ -123,7 +134,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/toallon.jpg" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
@@ -137,7 +150,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/toallon.jpg" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
@@ -151,7 +166,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="/images/toallon.jpg" alt="Acolchado" />
+        <div class="card-image">
+          <img src="/images/toallon.jpg" alt="Acolchado" />
+        </div>
         <div class="card-content">
           <div class="product-info">
             <h2>Acolchado Doble Faz Love & Home</h2>
