agregar estilos responsive en tablet para header

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       </div>
 
       <div class="user-actions">
-        <a href="registro.html" class="btn">Creá tu cuenta</a>
-        <a href="login.html" class="btn">Ingresá</a>
+        <a href="login.html" class="btn login-icon"><i class="fa-solid fa-right-to-bracket"></i></a>
+        <a href="registro.html" class="btn login-text">Creá tu cuenta</a>
+        <a href="login.html" class="btn login-text">Ingresá</a>
         <a href="carrito.html" class="btn"
           ><i class="fa-solid fa-bag-shopping"></i
         ></a>
