cambiar estilo del login

--- a/login.html
+++ b/login.html
@@ -11,6 +11,17 @@
       <div class="login-container">
         <div class="form-container">
           <form class="login-form" action="" method="POST">
+            <div
+              class="logo-container"
+              style="text-align: center; margin: 12px 0"
+            >
+              <img
+                src="/images/Logo-Web-De-Todito.png"
+                alt="Logo De Todito"
+                style="width: 160px; height: auto; display: inline-block"
+                loading="lazy"
+              />
+            </div>
             <h1 class="login-title">¡BIENVENIDO!</h1>
 
             <div class="form-input">
@@ -62,7 +73,7 @@
             </div>
           </form>
         </div>
-        <div class="right-background"
+        <!-- <div class="right-background"></div> -->
       </div>
     </div>
   </body>
