--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
       <button>Ayuda</button>
     </nav>
 
-    <!-- SLIDER -->
-    <section class="slider">
-      <img src="/images/BANNER3.png" alt="matero">
-      <!-- <img src="/images/BANNER4.png" alt="utensillos"> -->
-    </section>
+    <!-- carrusel -->
+    <div class="carrusel">
+  <div class="imagenes">
+    <img src="/images/BANNER1.png" alt="Imagen 1">
+    <img src="/images/BANNER2.png" alt="Imagen 2">
+    <img src="/images/BANNER3.png" alt="Imagen 3">
+    <img src="/images/BANNER4.png" alt="Imagen 4">
+  </div>
+</div>
 
     <!-- PRODUCTOS -->
     <main class="productos">
