mover estilos de logo en login a archivo css

--- a/login.html
+++ b/login.html
@@ -11,14 +11,10 @@
       <div class="login-container">
         <div class="form-container">
           <form class="login-form" action="" method="POST">
-            <div
-              class="logo-container"
-              style="text-align: center; margin: 12px 0"
-            >
+            <div class="logo-container">
               <img
                 src="/images/Logo-Web-De-Todito.png"
                 alt="Logo De Todito"
-                style="width: 160px; height: auto; display: inline-block"
                 loading="lazy"
               />
             </div>
