agregar paginas de categorias

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </div>
 
       <div class="user-actions">
-        <a href="login.html" class="btn login-icon"><i class="fa-solid fa-right-to-bracket"></i></a>
+        <a href="login.html" class="btn login-icon"
+          ><i class="fa-solid fa-right-to-bracket"></i
+        ></a>
         <a href="registro.html" class="btn login-text">Creá tu cuenta</a>
         <a href="login.html" class="btn login-text">Ingresá</a>
         <a href="carrito.html" class="btn"
@@ -108,7 +110,9 @@
         </div>
         <div class="card-content">
           <div class="product-info">
-            <h2>Acolchado Doble Faz Love & Home</h2>
+            <h2 data-full="Acolchado Doble Faz Love & Home color azúl">
+              Acolchado Doble Faz Love & Home color azúl
+            </h2>
             <p>$63.300</p>
             <h3>3 cuotas sin interés de $21.100,00</h3>
           </div>
@@ -124,7 +128,7 @@
         </div>
         <div class="card-content">
           <div class="product-info">
-            <h2>Acolchado Doble Faz Love & Home</h2>
+            <h2>Acolchado Doble Faz Love & Home color rojo</h2>
             <p>$63.300</p>
             <h3>3 cuotas sin interés de $21.100,00</h3>
           </div>
