Actualización y agregado de registro

--- a/Recuperar.html
+++ b/Recuperar.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h2><img src="images (1).jpeg" alt="logo">Recuperar Contraseña</h2>
+        <h2><img src="images/recuperacion.png" alt="logo">Recuperar Contraseña</h2>
         
         <form id="password-form" action="#" method="POST" onsubmit="mostrarMensaje(); return false;">
-            <label for="email">Introduce tu correo electrónico institucional:</label><br>
+            <label for="email">Introduce tu correo electrónico:</label><br>
             <input type="email" id="email" name="email" required><br><br>
 
             <input type="submit" value="Enviar">
