--- a/login.html
+++ b/login.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
-=======
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,7 +54,7 @@
                 <label for="remember">Recordarme</label>
               </div>
               <div>
-                <a href="" class="forgot-password">Olvidé mi clave</a>
+                <a href="Recuperar.html" class="forgot-password">Olvidé mi clave</a>
               </div>
             </div>
 
@@ -89,4 +78,3 @@
     </div>
   </body>
 </html>
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
