--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="/images/BANNER1.png" alt="Banner 1" />
         <img src="/images/BANNER2.png" alt="Banner 2" />
         <img src="/images/BANNER3.png" alt="Banner 3" />
-        <img src="/images/BANNER4.png" alt="Banner 4" />
+        <video src="/images/BANNER4.mp4" alt="Banner 4" autoplay muted loop></video>
       </div>
 
       <div class="dots" role="tablist" aria-label="Indicadores del carrusel">
