Agregado el campo de fecha de nacimiento

--- a/registro.html
+++ b/registro.html
@@ -24,6 +24,10 @@
     <label for="email">Correo electrónico:</label><br>
     <input type="email" id="email" name="email" required><br><br>
 
+    <label for="fecha_nacimiento">Fecha de nacimiento:</label><br>
+    <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required><br><br>
+
+
     <label for="usuario">Nombre de usuario:</label><br>
     <input type="text" id="usuario" name="usuario" required><br><br>
 
