--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
               <div class="register">
                 <p>
                   ¿No estás registrado?
-                  <a class="register-link" href="">¡Hazlo ahora!</a>
+                  <a class="register-link" href="registro.html">¡Hazlo ahora!</a>
                 </p>
               </div>
             </div>
