Actualización de registro

--- a/registro.html
+++ b/registro.html
@@ -9,7 +9,8 @@
 <body>
 
   <form action="registro_exitoso.html" method="post">
-    <img src="images/Formulario.jpg" alt="Registro" class="logo">
+    <img src="images/De Todito LOGO(2).png" alt="Registro" class="logo">
+    <h2>Crear una cuenta</h2>
 
     <label for="nombre">Nombre:</label><br>
     <input type="text" id="nombre" name="nombre" required><br><br>
