--- a/Recuperar.html
+++ b/Recuperar.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/DeTodito-logo-sin.png" />
     <title>Recuperar Contraseña</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="estilos.css" />
+  </head>
+  <body>
     <div class="container">
-        <h2><img src="images (1).jpeg" alt="logo">Recuperar Contraseña</h2>
-        
-        <form id="password-form" action="#" method="POST" onsubmit="mostrarMensaje(); return false;">
-            <label for="email">Introduce tu correo electrónico institucional:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+      <h2><img src="images (1).jpeg" alt="logo" />Recuperar Contraseña</h2>
 
-            <input type="submit" value="Enviar">
-        </form>
+      <form
+        id="password-form"
+        action="#"
+        method="POST"
+        onsubmit="mostrarMensaje(); return false;"
+      >
+        <label for="email">Introduce tu correo electrónico institucional:</label
+        ><br />
+        <input type="email" id="email" name="email" required /><br /><br />
 
-        <!-- Mensaje de confirmación que se mostrará después de enviar -->
-        <div id="confirmation-message" style="display:none; margin-top: 20px;">
-            <p>Se ha enviado un mensaje de verificación al siguiente correo: <span id="user-email"></span>.</p>
-        </div>
+        <input type="submit" value="Enviar" />
+      </form>
+
+      <!-- Mensaje de confirmación que se mostrará después de enviar -->
+      <div id="confirmation-message" style="display: none; margin-top: 20px">
+        <p>
+          Se ha enviado un mensaje de verificación al siguiente correo:
+          <span id="user-email"></span>.
+        </p>
+      </div>
     </div>
 
     <script>
-        function mostrarMensaje() {
-            var email = document.getElementById("email").value;
-            document.getElementById("user-email").innerText = email;
-            document.getElementById("confirmation-message").style.display = "block";
-            document.getElementById("password-form").style.display = "none";
-        }
+      function mostrarMensaje() {
+        var email = document.getElementById('email').value;
+        document.getElementById('user-email').innerText = email;
+        document.getElementById('confirmation-message').style.display = 'block';
+        document.getElementById('password-form').style.display = 'none';
+      }
     </script>
-</body>
+  </body>
 </html>
