--- a/categorias/camperas.html
+++ b/categorias/camperas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camperas</title>
-    
-     <link rel="stylesheet" href="/styles/categorias.css" />
+    <link rel="shortcut icon" href="/images/DeTodito-logo-sin.png" />
+         <link rel="stylesheet" href="/styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
