--- a/categorias/varios.html
+++ b/categorias/varios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Varios</title>
-
+    <link rel="shortcut icon" href="/images/DeTodito-logo-sin.png" />
      <link rel="stylesheet" href="/styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
