agregar crédito a Freepik en el footer y agregar cards a todas las categorias

--- a/categorias/blanqueria.html
+++ b/categorias/blanqueria.html
@@ -1,17 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blanqueria</title>
     <link rel="shortcut icon" href="/images/DeTodito-logo-sin.png" />
-        <link rel="stylesheet" href="/styles/categorias.css" />
+    <link rel="stylesheet" href="/styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- PRODUCTOS -->
+    <main class="productos">
+      <div class="card">
+        <div class="card-image">
+          <img
+            src="/images/bolso-matero-unicross.jpg"
+            alt="Bolso Matero marca Unicross"
+          />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Bolso Matero Unicross</h2>
+            <p>$17.600</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="images/bufanda.jpg" alt="Bufanda marca" />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Bufanda</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="/images/paraguas.jpg" alt="Paraguas Trendy" />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Paraguas Trendy</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="/images/billetera.jpg" alt="Billetera" />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2 data-full="Acolchado Doble Faz Love & Home color azúl">
+              Billetera
+            </h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="/images/toalla.jpg" alt="Toallas" />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Toalla</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="/images/manton.jpg" alt="Manton" />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Manton</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img
+            src="/images/manta-plush-acanalada.jpg"
+            alt="Manta Plush Acanalada"
+          />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Manta Plush Acanalada</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="/images/acolchado.jpg" alt="Acolchado" />
+        </div>
+        <div class="card-content">
+          <div class="product-info">
+            <h2>Acolchado Doble Faz Love & Home</h2>
+            <p>$63.300</p>
+            <h3>3 cuotas sin interés de $21.100,00</h3>
+          </div>
+          <div class="product-actions">
+            <button><i class="fa-solid fa-bag-shopping"></i></button>
+            <button><i class="fa-solid fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Más productos aquí -->
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer-section">
+        <div class="footer-section-item">
+          <i class="fa-solid fa-truck"></i>
+          <div class="footer-section-text">
+            <p>Envíos a todo el país</p>
+            <span>Envíos por Andreani y Correo Argentino</span>
+          </div>
+        </div>
+        <div class="footer-section-item">
+          <i class="fa-solid fa-credit-card"></i>
+          <div class="footer-section-text">
+            <p>Todos los medios de pago</p>
+            <span>Aceptamos todos los medios de pagos</span>
+          </div>
+        </div>
+      </div>
+      <div class="footer-links">
+        <div class="footer-links-columns">
+          <div>
+            <a href="#">Preguntas frecuentes</a>
+            <a href="#">Métodos de pago</a>
+            <a href="#">Contacto</a>
+          </div>
+          <div>
+            <a href="#">Botón de arrepentimiento</a>
+            <a href="#">Cambios y devoluciones</a>
+          </div>
+        </div>
+        <div class="footer-social">
+          <p>¡Seguinos en nuestras redes!</p>
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-legal">
+        Imágenes diseñadas por<a href="http://www.freepik.es/">Freepik</a>
+      </div>
+    </footer>
+  </body>
 </html>
