--- a/index.html
+++ b/index.html
@@ -288,8 +288,7 @@
         </div>
       </div>
       <div class="footer-legal">
-        <a href="#">Términos y condiciones</a>
-        <a href="#">Políticas de privacidad</a>
+        Imágenes diseñadas por<a href="http://www.freepik.es/">Freepik</a>
       </div>
     </footer>
   </body>
